# linkata

./: .gitignore  CMakeLists.txt
modules/: GenerateCorradeResourceFile.cmake  LinkataFetchDependencies.cmake
res/drawable/emojis/: list_of_emojis.txt  list_of_emojis_png.txt  list_of_emojis_svg.txt
scripts/: download-magnum-modules.sh
src/: CMakeLists.txt  ICON.rc  VERSIONINFO.rc  index.html  linkata.css  linkata_pre.js  main.cpp  server.py
src/lk/: app.cpp  app.hpp  config.hpp.in  corrade_debug_stream_util.hpp  emoji.cpp  emoji.hpp  emoji_svg_cache.cpp  emoji_svg_cache.hpp  emoji_texture_cache.cpp  emoji_texture_cache.hpp  fmt_corrade.tpp  fmt_magnum.tpp  hax.cpp  hax.hpp  id.cpp  id.hpp  lk.hpp  log.cpp  log.hpp  log.tpp  ready_task_queue.cpp  ready_task_queue.hpp  resource.cpp  resource.hpp  resource_handle.cpp  resource_handle.hpp  state.cpp  state.hpp  svg.cpp  svg.hpp  util.cpp  util.hpp
src/lk/emscripten/: CMakeLists.txt  ui.cpp  ui.hpp  ui.tpp
src/lk/imgui/: CMakeLists.txt  emoji_renderer.tpp  framerate_graph.cpp  framerate_graph.hpp  image_toggle_button.cpp  image_toggle_button.hpp  style.cpp  style.hpp  text_toggle_button.cpp  text_toggle_button.hpp  texture_viewer.hpp  texture_viewer.tpp  ui.cpp  ui.hpp  ui.tpp  util.cpp  util.hpp
src/lk/ultralight/: ui.hpp
